fix(infieldbutton): high contrast mode has a focus outline

--- a/components/infieldbutton/index.css
+++ b/components/infieldbutton/index.css
@@ -174,6 +174,14 @@ governing permissions and limitations under the License.
 			);
 		}
 	}
+
+	&:hover:not(:disabled),
+	&:active:not(:disabled),
+	&:focus-visible:not(:disabled) {
+		@media (forced-colors: active) {
+			--highcontrast-infield-button-border-color: Highlight;
+		}
+	}
 }
 
 .spectrum-InfieldButton {
@@ -214,8 +222,9 @@ governing permissions and limitations under the License.
 		);
 		border-style: solid;
 		border-color: var(
-			--mod-infield-button-border-color,
-			var(--spectrum-infield-button-border-color)
+			--highcontrast-infield-button-border-color,
+			var(--mod-infield-button-border-color,
+			var(--spectrum-infield-button-border-color))
 		);
 		border-end-end-radius: var(
 			--mod-infield-button-border-radius,
@@ -394,8 +403,6 @@ governing permissions and limitations under the License.
 		);
 	}
 }
-
-
 
 .spectrum-InfieldButton-icon {
 	display: initial;
